chore: use unmodifiableList